2005-08-17  0.9.23  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/frontend.c (set_sensitive): Disable the hotkeys when the
	GtkAction is disabled
	
2005-08-14  0.9.22  Roland Clobus <rclobus@bigfoot.com.
	* editor/gtk/editor.c: Use GPOINTER_TO_INT instead of (gint) cast
	* client/gtk/interface.c: Fixed build cursor is shown for wrong player
	* client/common/client.c (setup_msg): Removed extra comma in setup
	message
	* client/gtk/settingscreen.c: Replaced the GtkFrame with GNOME style
	labels and indentation
	* client/common/resource.c (resource_format_type): Added support for
	showing numbers
	* client/gtk/legend.c: Replaced the GtkFrame with GNOME style labels
	and indentation, and use cost_* functions
	* client/callback.h, client/common/client.c, client/gtk/gui.c,
	client/gtk/interface.c: Enable the left pane for messages: road
	building, place the robber, move a ship

2005-08-14  Bas Wijnen <shevek@fmf.nl>
	* client/gtk/connect.c: Fixed buffer overrun
	* client/gtk/gui.c: Fix for crash at startup with toolbar hidden

2005-08-05  0.9.21  Stefan Walter <sw@gegenunendlich.de>
	* meta-server/main.c: Added missing #includes for FreeBSD
	
2005-08-01  0.9.20  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/player.c (player_build_summary): Add missing line in
	summary for Gtk+-2.6
	* common/gtk/aboutbox.c (aboutbox_display): Add close button to about
	dialog
	
2005-07-14  0.9.19  Roland Clobus <rclobus@bigfoot.com>
	* README.cygwin: Added instructions for building from CVS.
	* autogen.sh: Added automake-1.9
	* configure.ac, client/gtk/Makefile.am, client/gtk/frontend.c,
	client/gtk/frontend.h, client/gtk/gui.c, client/gtk/offline.c,
	common/gtk/Makefile.am, editor/gtk/Makefile.am,
	server/gtk/Makefile.am: use libgnome+gtk instead of libgnomeui
	* Makefile.am: Renamed indent make target to reindent
	
2005-07-09  0.9.18  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/guimap.c: Single click build: when a ship and road can be